# actual

./: .env.example  .gitignore  DEPLOYMENT.md  LEVERAGED_MACHINE_IMPLEMENTATION.md  LEVERAGED_MACHINE_QUICKSTART.md  README.md  context2,md  docker-compose.yml  projectvision.md
backend/: Dockerfile  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/routes/: analysis.py  auth.py  backtest.py  data.py  fundamentals.py  macro.py  ml.py  risk.py  workspace.py
backend/app/core/: config.py  db.py  security.py
backend/app/data/fetchers/: alpha_vantage.py  fred.py  yahoo.py
backend/app/data/processors/: normalize.py
backend/app/engine/: fundamentals.py  indicators.py  macro.py  metrics.py  ml.py  portfolio_risk.py
backend/app/engine/backtester/: events.py  performance.py  runner.py  strategy.py
backend/app/models/: db_models.py  schemas.py
backend/tests/: test_backtester_performance.py  test_fundamentals_and_risk.py  test_metrics.py
data-pipeline/: build_lbo_model.py
frontend/: package-lock.json  package.json  react-grid-layout.d.ts  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/backtest/: page.tsx
frontend/app/dashboard/: page.tsx
frontend/app/datastore/: page.tsx
frontend/app/journalism/: page.tsx
frontend/app/macro/: page.tsx
frontend/app/models/: page.tsx
frontend/app/research/: page.tsx
frontend/app/risk/: page.tsx
frontend/components/charts/: price-chart.tsx
frontend/components/panels/: workspace-grid.tsx
frontend/lib/: api.ts
frontend/store/: auth.ts
(+11 files in other folders)
